# src/main/java/com/moreno/starsystemtraveltimeservice/model/validator/StarSystemsRequestValidator.java
@@ -1,6 +1,6 @@
 package com.moreno.starsystemtraveltimeservice.model.validator;
 
-import com.moreno.starsystemtraveltimeservice.model.dto.StarSystemsRequest;
+import com.moreno.starsystemtraveltimeservice.model.dto.StarSystemsRequestDTO;
 import com.moreno.starsystemtraveltimeservice.model.validator.exception.RequestInvalidException;
 import org.springframework.stereotype.Component;
 
@@ -12,8 +12,8 @@ public class StarSystemsRequestValidator {
     public StarSystemsRequestValidator() {
     }
 
-    public void validate(StarSystemsRequest starSystemsRequest)  {
-        List<String> starsystemNames=starSystemsRequest.getStarSystems();
+    public void validate(StarSystemsRequestDTO starSystemsRequestDTO)  {
+        List<String> starsystemNames= starSystemsRequestDTO.getStarSystems();
        if(starsystemNames.stream().anyMatch(s-> s==null || s.isEmpty())){
            throw new RequestInvalidException("atleast one system name is empty");
        }
